# statHandler

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
app/: config.py  excel_processor.py  mq_consumer.py  send_email.py
logger/: logger.py
